--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 </div>
         </div>
         <div class="time">
-            <div class="date">00 &nbsp;<span>DAYS</span></div>
+            <span class="date">00</span>&nbsp;<span class="date-p2">DAYS</span>
             <div class="count-time">
                 <span class="hour">00</span>:<span class="min">00</span>:<span class="second"></span>
             </div>
